--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -1,6 +1,6 @@
 # Use PHP5.3 as default
 #AddHandler application/x-httpd-php53 .php
-#Options +FollowSymLinks
+Options +FollowSymLinks
 #Options +SymLinksIfOwnerMatch
 
 RewriteEngine On
